--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,32 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.app-frame {
+  margin: 0;
+  padding: 30px;
+  box-sizing: border-box;
+  width: 100vw;
+  height: 100vh;
+  background: #00cbcc;
+}
+
+.customers-actions {
+  margin: 0;
+  position: absolute;
+  bottom: 20px;
+  left: 30px;
+  background: rgba(0,0,0,0.2);
+  padding: 10px;
+  width: calc(100% - 80px);
+}
+
+customers-actions button {
+  background: white;
+  min-width: 100px;
+  height: 30px;
+  margin: 5px;
+  border-style: none;
+  border-radius: 3px;
+  font-weight: bolder;
+}
